# adone

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .npmignore  CMakeCache.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  adone.conf.js  adone.conf.json  adone.d.ts  adone.json  binding.gyp  build.js  build.ninja  cli.json  cmake_install.cmake  gulpfile.js  jsconfig.json  package-lock.json  package.json  paused.conf  realm.js  rules.ninja  shanifile.js  test.js
.adone/: config.json  dev.js  dev.json  env.js  identity.json  kri.js  layout.json  meta.json  tasks.js
.adone/tasks/: application.js  application_project.js  build.js  cli_application.js  cli_application_project.js  cli_command.js  copy.js  dot_compiler.js  gloss_project.js  increase_version.js  install.js  nbuild.js  realm_clean.js  realm_init.js  transpile.js  transpile_exe.js  unmount.js  watch.js
.meta/: adone.json  index.js
.realm/: config.js  init.js  reset.js
benchmarks/: adone_tags.js  apply_vs_spread.js  async.js  async_vs_generator.js  function_call.js  glob.js  key_value.js  lru.js  object_creating.js  utf8validation.js  util_keys_vs_object_keys.js
benchmarks/netron/: packet_serializer.js  unique_id.js
benchmarks/serializers/: bson.js  data.bson  data.json  data.json5  data.mpak  index.js
benchmarks/serializers2/: index.js
cmake/: Hunter
cmake/configs/: default.cmake
cmake/find/: FindMySQL-client.cmake  Findgeos.cmake  Findodb-compiler.cmake  Findodb.cmake
cmake/modules/: hunter_autotools_project.cmake  hunter_calculate_toolchain_sha1.cmake  hunter_create_cache_file.cmake  hunter_download.cmake  hunter_experimental_add_host_project.cmake  hunter_finalize.cmake  hunter_set_config_location.cmake  hunter_unpack_directory.cmake  hunter_upload_cache.cmake
cmake/schemes/: url_sha1_cmake.cmake.in  url_sha1_ios_sim.cmake.in  url_sha1_unpack.cmake.in  url_sha1_unpack_bin_install.cmake.in  url_sha1_unpack_install.cmake.in
cmake/scripts/: create-toolchain-info.cmake
cmake/templates/: BoostConfig.cmake.in  libsodiumConfig.cmake.in  libxml2Config.cmake.in
configs/: realm.js
defaults/configs/: adone.js  omnitron.js
defaults/scripts/: adone  adone-freebsd.sh  adone-init-amazon.sh  adone-init.sh  adone.cmd  adone.service  io.keymetrics.PM2.plist
eslint_rules/: index.js  package-lock.json  package.json
etc/configs/: adone.js  cli.json  omnitron.js  subsystems.json
etc/media/: adone.txt
etc/scripts/: adone  avm
etc/templates/: package.json
examples/: app_arguments.js  core.js  editor.js  fluent.js  fuse_engine_test.js  http_proxy.js  masscan.js  metrics.js  report.js  shadowsocks_proxy_client.js  shadowsocks_proxy_server.js
examples/application/: app_arguments.js  decorated_app.js  decorated_cli_app.js  holder.js  report.js
examples/netron/: another_chat.js  chat.js
examples/terminal/: 24bits-colors.js  256colors.js  cursor-color.js  dashboard-random-colors.js  dashboard.js  events.js  explorer.js  program-mouse.js  screen.js  widget-autopad.js  widget-bar.js  widget-bigtext.js  widget-carousel.js  widget-csr.js  widget-dock-noborder.js  widget-dock.js  widget-donut.js  widget-exit.js  widget-exlog.js  widget-extable-color.js  widget-extable.js  widget-file.js  widget-form.js  widget-gauge-list.js  widget-gauge-stack.js  widget-gauge.js  widget-grid-no-border.js  widget-grid.js  widget-insert.js  widget-layout.js  widget-lcd.js  widget-line-abbreviate.js  widget-line-fraction.js  widget-line-random-colors.js  widget-line-start-above-zero.js  widget-listbar.js  widget-listtable.js  widget-log.js  widget-map.js  widget-markdown.js  (+25 more)
hunter/: CMakeLists.txt  simple.cpp
hunter/_builds/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  simple
init-default/: LOG
metatests/: index.js
platform/base/: README.md
platform/simple/: CMakeLists.txt  simple.cpp
platform/simple/cmake/: gate.cmake  passwords.cmake
platform/teos/: README.md
platform/zero/: .clang-format  .gitmodules  CMakeLists.txt
pres/: logo.js  spinner.html
regressions/: netrofall.js
scripts/: bump_version.js  init.js
share/media/: adone.txt
src/: common.js  index.js  reflect.js
src/app/: adone  adone.cmd  adone.js  configuration.js  repl.js  typescript.js
src/benchmark/: index.js
src/bundle/: Chunk.js  ExternalModule.js  Graph.js  Module.js  chunk-optimization.js  index.js
src/cli/: adone.js  configuration.js  index.js  kit.js  manager.js  shani.js
src/cmake/: appCMakeJSConfig.js  build_system.js  cm_log.js  cmake.js  dist.js  downloader.js  processHelpers.js  runtime_paths.js  toolset.js  vs_detect.js
src/commands/: bench.js  inspect.js  link.js  run.js
src/fast/: file.js  index.js  local_map_stream.js  local_stream.js  stream.js
src/glosses/: peripheral.js
src/glosses/compressors/brotli/native/: CMakeLists.txt  binding.gyp
src/glosses/compressors/brotli/native/src/: brotli.cc  brotli.h
src/glosses/compressors/xz/native/: CMakeLists.txt  binding.gyp
src/glosses/compressors/xz/native/src/: filter-array.cpp  index-parser.cpp  index-parser.h  liblzma-functions.cpp  liblzma-node.hpp  lzma-stream.cpp  util.cpp
src/glosses/crypto/secp256k1/native/: CMakeLists.txt  binding.gyp
src/glosses/databases/level/backends/leveldb/native/: CMakeLists.txt  binding.gyp
src/glosses/databases/level/backends/leveldb/native/src/: async.h  batch_async.h  common.h  database.cc  database_async.cc  iterator.cc  iterator_async.cc  leveldown.cc  leveldown.h  leveldown_async.h
src/glosses/databases/level/backends/leveldb/native/src/leveldb/: CMakeLists.txt  leveldb.gyp
src/ipfs/: index.js
src/isolated_vm/: index.js
src/lodash/: index.js
src/mount_points/: app_command.js  index.js
src/napa/: binding.js  index.js  log.js  memory.js  metric.js  runtime.js  store.js  sync.js  transport.js  v8.js  zone.js
src/native/: adone.h  bignumber.cc  binding.gyp  common.cc  memcpy.cc  microtime.cc  terminal.cc  userid.cc  utf8validation.cc  wsbufferutil.cc
src/npm/: index.js
tests/: .eslintrc.js  todo.test.js
typings/: index.d.ts
(+14738 files in other folders)
